welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: type mismatch;
 found   : Int
 required: String
	var b: String=a 
                      ^